kubernetes/armhf/acake2php-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    io.balena.features.dbus: "1"
    kompose.cmd: kompose convert --controller deployment -o kubernetes/armhf/ -f docker-compose.armhf
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: acake2php
  name: acake2php
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  - name: "443"
    port: 443
    targetPort: 443
  selector:
    io.kompose.service: acake2php
status:
  loadBalancer: {}
