kubernetes/armhf/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    io.balena.features.dbus: "1"
    kompose.cmd: kompose convert --controller deployment -o kubernetes/armhf/ -f docker-compose.armhf
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  ports:
  - name: "3306"
    port: 3306
    targetPort: 3306
  selector:
    io.kompose.service: db
status:
  loadBalancer: {}
